little Translation update.

--- a/trunk/sim/po/bg.po
+++ b/trunk/sim/po/bg.po
@@ -2286,7 +2286,7 @@ msgid "Plugin provides about information"
 msgstr "Приставката осигурява информация за програмата"
 
 #: plugins/about/about.cpp:61
-msgid "&Bug report"
+msgid "&Bug report / Requests"
 msgstr "&Съобщения за грешки"
 
 #: plugins/about/about.cpp:71
