--- a/trunk/sim/po/cs.po
+++ b/trunk/sim/po/cs.po
@@ -2285,7 +2285,7 @@ msgid "Plugin provides about information"
 msgstr "Plugin poskytuje informace O aplikaci"
 
 #: plugins/about/about.cpp:61
-msgid "&Bug report"
+msgid "&Bug report / Requests"
 msgstr "&Nahlášení chyb"
 
 #: plugins/about/about.cpp:71
