--- a/trunk/sim/po/pl.po
+++ b/trunk/sim/po/pl.po
@@ -2496,7 +2496,7 @@ msgid "Plugin provides about information"
 msgstr ""
 
 #: plugins/about/about.cpp:61
-msgid "&Bug report"
+msgid "&Bug report / Requests"
 msgstr "Raport o &błędzie"
 
 #: plugins/about/about.cpp:71
