--- a/trunk/sim/po/he.po
+++ b/trunk/sim/po/he.po
@@ -2485,7 +2485,7 @@ msgid "Plugin provides about information"
 msgstr ""
 
 #: plugins/about/about.cpp:61
-msgid "&Bug report"
+msgid "&Bug report / Requests"
 msgstr "&דיווח על באג"
 
 #: plugins/about/about.cpp:71
