--- a/trunk/sim/po/ru.po
+++ b/trunk/sim/po/ru.po
@@ -2638,7 +2638,7 @@ msgstr "Модуль обеспечивает вывод информации о
 
 # mainwin.cpp:2379
 #: plugins/about/about.cpp:61
-msgid "&Bug report"
+msgid "&Bug report / Requests"
 msgstr "С&ообщение об ошибке"
 
 # mainwin.cpp:2380
