--- a/trunk/sim/po/sim.pot
+++ b/trunk/sim/po/sim.pot
@@ -1786,7 +1786,7 @@ msgid "Plugin provides about information"
 msgstr ""
 
 #: plugins/about/about.cpp:61
-msgid "&Bug report"
+msgid "&Bug report / Requests"
 msgstr ""
 
 #: plugins/about/about.cpp:71
