--- a/trunk/sim-qt4-fullport/TODO
+++ b/trunk/sim-qt4-fullport/TODO
@@ -5,3 +5,26 @@ TODO list for sim-im 1.0.0:
 1) profiles (icesik@)
 2) port to Qt4 (darkstar@)
 3) fix all bugs ;-)
+
+darkstar@: port to qt4 todo:
+get read of:
+    Q3MimeSourceFactory (port to QMimeData)
+    Q3SimpleRichText (port to QTextEdit)
+    Q3ListView[Item] (port to QTreeWidget[Item])
+    Q3Accell (port to QAction)
+    Q3Wizard (create new dialogs with QDialog class)
+    libtool plugins loader (port to QPluginLoader API)
+    icons and theme handling (port to new QT Resource system and rewrite theme handling code)
+rewrite:
+    api library and to use Unicode (utf-8) encoding for all internal text exchange
+    history view module (recreate interface and change behavior)
+    userlist and profiles module (fix userlist handling and profile management)
+    message windows containers (port from old QTabbar API)
+    all drag and drop handling (port to QMimeData and QGrag API)
+    integrate _core and _homedir plugins into main app (we don't need it as plugins really)
+add:
+    jabber conferencing support
+    customize few dialogs (add pictures, styles and other stuff just for beauty ;)
+
+to all:
+    since I've droped old project files, we'll need to recreate them for new structure.
